# ai-meeting-taker

./: .env.template  README.md  audio_manager.py  config.py  file_exporter.py  gemini_processor.py  main.py  notion_exporter.py  pyproject.toml  test_sc.py
meeting-content/: Informal Exchange on a Completed Task - 2026-03-03.txt  No discernible meeting content - 2026-03-03.txt
